--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </form> 
         </div>
 
-    <div class=" flex column items-center justify-center">
+    <div class=" flex column items-center justify-center space-large-down">
         <p class="text-xlarge text-indent pad space-medium text-center">How Long Until Long Distance is Over? </p>
         <div class="block flex column items-center justify-center standard-width">
             <p class="text-large text-indent pad">Clock </p>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="flex items-center justify-center flex-wrap space-large-down">
-                <div class="pad flex column justify-center items-center">
+                <div class="par items-cend flex column justify-centeter">
                     <div class="color-block space" style="--block-color: #d9ed92; --block-shadow-color: #b5e48c"></div>
                     <p>Seconds</p>
                 </div>
@@ -124,9 +124,9 @@
         </div>
     </div>
        
-    <div class="space-large">
-        <div class="flex column items-center justify-center">
-            <div class="block flex column items-center justify-center standard-width">
+    <div class="space-large-down">
+        <div class="flex column items-center justify-center ">
+            <div class="block flex column items-center justify-center standard-width ">
                 <p class="text-large text-indent pad">Progress Bar </p>
                 <div class="flex column center pad"> 
 
