--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
 
             <div class="flex items-center justify-center flex-wrap space-large-down">
-                <div class="par items-cend flex column justify-centeter">
+                <div class="pad items-center flex column justify-centeter">
                     <div class="color-block space" style="--block-color: #d9ed92; --block-shadow-color: #b5e48c"></div>
                     <p>Seconds</p>
                 </div>
